<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coor_background"
    tools:context=".TermsConditions">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="333dp"
        android:layout_height="412dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="48dp"
        android:textAlignment="inherit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_conditions_text"
            android:textColor="@color/black" />

    </ScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="92dp"
        android:text="@string/terms_conditions_activity_terms_and_conditions"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="164dp"
        android:text="@string/not_bored_activity_inicio"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/color_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="41dp"
        android:layout_height="53dp"
        android:background="@color/coor_background"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

</androidx.constraintlayout.widget.ConstraintLayout>